--- a/_config.yml
+++ b/_config.yml
@@ -59,4 +59,4 @@ exclude:
 # Remote Theme
 # (Used only for GitHub deployments)
 # See https://help.github.com/en/articles/adding-a-jekyll-theme-to-your-github-pages-site
-theme: minicomp/ed
+remote-theme: minicomp/ed
