--- a/_config.yml
+++ b/_config.yml
@@ -60,3 +60,6 @@ exclude:
 # (Used only for GitHub deployments)
 # See https://help.github.com/en/articles/adding-a-jekyll-theme-to-your-github-pages-site
 remote-theme: minicomp/ed
+
+plugins:
+  - jekyll-remote-theme
